--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Sophia Gabrielle E. Soriano
 </td>
 </tr>
 <tr>
-<td><b>Desciption:</b></td>
+<td><b>Description:</b></td>
 <td>The project, GT Alert...
 </td>
 </tr>
